--- a/GeneticTest/GeneticTest.csproj
+++ b/GeneticTest/GeneticTest.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CreatureTest.cs" />
     <Compile Include="GeneTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
