--- a/GeneticDLL/GeneticDLL.csproj
+++ b/GeneticDLL/GeneticDLL.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Gene.cs" />
     <Compile Include="Helix.cs" />
     <Compile Include="Society.cs" />
-    <Compile Include="Utility.cs" />
+    <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
