Implemented Save options, Open options, and layout of ribbon menu.

--- a/GeneticsGUI/GeneticsGUI.csproj
+++ b/GeneticsGUI/GeneticsGUI.csproj
@@ -79,10 +79,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GeneticsDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GeneticsDialog.Designer.cs">
+      <DependentUpon>GeneticsDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GeneticsDialog.resx">
+      <DependentUpon>GeneticsDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
