EditCreatureDialog windows form generated, objects on form named. Committing for save!

--- a/GeneticsGUI/GeneticsGUI.csproj
+++ b/GeneticsGUI/GeneticsGUI.csproj
@@ -73,6 +73,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EditCreatureDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditCreatureDialog.Designer.cs">
+      <DependentUpon>EditCreatureDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +93,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="EditCreatureDialog.resx">
+      <DependentUpon>EditCreatureDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
