Help/About Layout
Base layout for help/about dialog. Next step: make HelpDialog.cs [Design] responsive.

--- a/GeneticsGUI/GeneticsGUI.csproj
+++ b/GeneticsGUI/GeneticsGUI.csproj
@@ -91,6 +91,12 @@
     <Compile Include="GeneticsDialog.Designer.cs">
       <DependentUpon>GeneticsDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="HelpDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelpDialog.Designer.cs">
+      <DependentUpon>HelpDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="EditCreatureDialog.resx">
@@ -101,6 +107,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GeneticsDialog.resx">
       <DependentUpon>GeneticsDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HelpDialog.resx">
+      <DependentUpon>HelpDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
